--- a/package.json
+++ b/package.json
@@ -21,34 +21,34 @@
   },
   "homepage": "https://github.com/zys8119/uiDome#readme",
   "engines": {
-      "node": ">= 16"
+    "node": ">= 16"
   },
   "packageManager": "pnpm@6.23.2",
   "workspaces": [
-      "packages/*",
-      "play",
-      "docs"
+    "packages/*",
+    "play",
+    "docs"
   ],
   "peerDependencies": {
-      "vue": "^3.2.0"
+    "vue": "^3.2.0"
   },
   "dependencies": {
-      "@wisdom-plus/components": "workspace:*",
-      "@wisdom-plus/directives": "workspace:*",
-      "@wisdom-plus/hooks": "workspace:*",
-      "@element-plus/icons": "^0.0.11",
-      "@wisdom-plus/locale": "workspace:*",
-      "@wisdom-plus/test-utils": "workspace:*",
-      "@wisdom-plus/theme-chalk": "workspace:*",
-      "@wisdom-plus/tokens": "workspace:*",
-      "@wisdom-plus/utils": "workspace:*",
-      "@popperjs/core": "^2.10.2",
-      "@vueuse/core": "^7.0.0",
-      "async-validator": "^4.0.7",
-      "dayjs": "^1.10.7",
-      "lodash": "^4.17.21",
-      "memoize-one": "^6.0.0",
-      "normalize-wheel-es": "^1.1.1"
+    "@wisdom-plus/components": "workspace:*",
+    "@wisdom-plus/directives": "workspace:*",
+    "@wisdom-plus/hooks": "workspace:*",
+    "@element-plus/icons": "^0.0.11",
+    "@wisdom-plus/locale": "workspace:*",
+    "@wisdom-plus/test-utils": "workspace:*",
+    "@wisdom-plus/theme-chalk": "workspace:*",
+    "@wisdom-plus/tokens": "workspace:*",
+    "@wisdom-plus/utils": "workspace:*",
+    "@popperjs/core": "^2.10.2",
+    "@vueuse/core": "^7.0.0",
+    "async-validator": "^4.0.7",
+    "dayjs": "^1.10.7",
+    "lodash": "^4.17.21",
+    "memoize-one": "^6.0.0",
+    "normalize-wheel-es": "^1.1.1"
   },
   "devDependencies": {
     "@pnpm/find-workspace-packages": "^3.1.26",
@@ -74,7 +74,7 @@
     "sucrase": "^3.20.3",
     "ts-morph": "^13.0.2",
     "typescript": "^4.5.2",
-    "vue": "3.2.22",
+    "vue": "^3.2.23",
     "vue-jest": "5.0.0-alpha.10",
     "vue-router": "4.0.12",
     "vue-tsc": "0.29.6"
