--- a/package.json
+++ b/package.json
@@ -33,17 +33,17 @@
     "vue": "^3.2.0"
   },
   "dependencies": {
+    "@element-plus/icons": "^0.0.11",
+    "@popperjs/core": "^2.10.2",
+    "@vueuse/core": "^7.0.0",
     "@wisdom-plus/components": "workspace:*",
     "@wisdom-plus/directives": "workspace:*",
     "@wisdom-plus/hooks": "workspace:*",
-    "@element-plus/icons": "^0.0.11",
     "@wisdom-plus/locale": "workspace:*",
     "@wisdom-plus/test-utils": "workspace:*",
     "@wisdom-plus/theme-chalk": "workspace:*",
     "@wisdom-plus/tokens": "workspace:*",
     "@wisdom-plus/utils": "workspace:*",
-    "@popperjs/core": "^2.10.2",
-    "@vueuse/core": "^7.0.0",
     "async-validator": "^4.0.7",
     "dayjs": "^1.10.7",
     "lodash": "^4.17.21",
@@ -58,6 +58,7 @@
     "@rollup/plugin-node-resolve": "^13.0.6",
     "@rollup/plugin-replace": "^3.0.0",
     "@types/sass": "^1.43.1",
+    "@vitejs/plugin-vue-jsx": "^1.3.1",
     "chalk": "4.1.2",
     "components-helper": "^1.0.4",
     "esbuild": "^0.14.0",
@@ -70,6 +71,7 @@
     "rollup-plugin-esbuild": "^4.7.2",
     "rollup-plugin-filesize": "^9.1.1",
     "rollup-plugin-vue": "^6.0.0",
+    "rollup-plugin-vue-jsx-compat": "^0.0.6",
     "sass": "^1.43.5",
     "sucrase": "^3.20.3",
     "ts-morph": "^13.0.2",
