--- a/play/tsconfig.json
+++ b/play/tsconfig.json
@@ -8,7 +8,8 @@
     "resolveJsonModule": true,
       "allowSyntheticDefaultImports": true,
       "moduleResolution": "Node",
-    "baseUrl": "."
+    "baseUrl": ".",
+    "jsx": "preserve"
   },
   "include": ["**/*"]
 }
