--- a/packages/wisdom-plus/package.json
+++ b/packages/wisdom-plus/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wisdom-plus",
-  "version": "0.0.0-dev.1",
+  "version": "0.0.0-beta.1",
   "description": "A Component Library for Vue 3",
   "homepage": "https://wisdom-plus.org/",
   "keywords": [
