--- a/docs/package.json
+++ b/docs/package.json
@@ -16,5 +16,8 @@
     "@vitejs/plugin-vue-jsx": "^1.3.1",
     "vitepress": "^0.20.9",
     "vitepress-theme-demoblock": "^1.4.2"
+  },
+  "dependencies": {
+    "@vicons/antd": "^0.11.0"
   }
 }
