--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "@css-render/vue3-ssr": "^0.15.6",
     "@element-plus/icons": "^0.0.11",
     "@popperjs/core": "^2.10.2",
+    "@vicons/antd": "^0.11.0",
+    "@vicons/utils": "^0.1.4",
     "@vueuse/core": "^7.1.2",
     "@wisdom-plus/components": "workspace:*",
     "@wisdom-plus/directives": "workspace:*",
