--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "lodash": "^4.17.21",
     "memoize-one": "^6.0.0",
     "normalize-wheel-es": "^1.1.1",
-    "vueuc": "^0.4.18"
+    "vdirs": "^0.1.7",
+    "vueuc": "^0.4.19"
   },
   "devDependencies": {
     "@pnpm/find-workspace-packages": "^3.1.26",
