--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "sucrase": "^3.20.3",
     "ts-morph": "^13.0.2",
     "typescript": "^4.5.2",
+    "unplugin-vue-components": "^0.17.11",
     "vue": "^3.2.23",
     "vue-jest": "5.0.0-alpha.10",
     "vue-router": "4.0.12",
