--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@css-render/vue3-ssr": "^0.15.6",
     "@element-plus/icons": "^0.0.11",
     "@popperjs/core": "^2.10.2",
+    "@types/spark-md5": "^3.0.2",
     "@vicons/antd": "^0.11.0",
     "@vicons/utils": "^0.1.4",
     "@vueuse/core": "^7.1.2",
@@ -54,6 +55,7 @@
     "lodash": "^4.17.21",
     "memoize-one": "^6.0.0",
     "normalize-wheel-es": "^1.1.1",
+    "spark-md5": "^3.0.2",
     "vdirs": "^0.1.7",
     "vueuc": "^0.4.19"
   },
