--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@css-render/vue3-ssr": "^0.15.6",
     "@element-plus/icons": "^0.0.11",
     "@popperjs/core": "^2.10.2",
+    "@types/lodash": "^4.14.178",
     "@types/spark-md5": "^3.0.2",
     "@vicons/antd": "^0.11.0",
     "@vicons/utils": "^0.1.4",
