[type] type fix

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build:theme": "pnpm run build -C packages/theme-chalk",
     "clean": "pnpm run clean:lib && pnpm run clean -r --stream",
     "clean:lib": "rimraf dist",
+    "tsc": "tsc --noEmit",
     "docs:dev": "pnpm run -C docs docs:dev",
     "docs:build": "pnpm run -C docs docs:build"
   },
