--- a/docs/package.json
+++ b/docs/package.json
@@ -18,6 +18,7 @@
     "vitepress-theme-demoblock": "^1.4.2"
   },
   "dependencies": {
-    "@vicons/antd": "^0.11.0"
+    "@vicons/antd": "^0.11.0",
+    "wangeditor": "^4.7.12"
   }
 }
