--- a/package.json
+++ b/package.json
@@ -58,8 +58,7 @@
     "normalize-wheel-es": "^1.1.1",
     "spark-md5": "^3.0.2",
     "vdirs": "^0.1.7",
-    "vueuc": "^0.4.19",
-    "wangeditor": "^4.7.12"
+    "vueuc": "^0.4.19"
   },
   "devDependencies": {
     "@pnpm/find-workspace-packages": "^3.1.26",
