--- a/package.json
+++ b/package.json
@@ -82,7 +82,7 @@
     "rollup-plugin-filesize": "^9.1.1",
     "rollup-plugin-vue": "^6.0.0",
     "rollup-plugin-vue-jsx-compat": "^0.0.6",
-    "sass": "^1.43.5",
+    "sass": "1.49.9",
     "sucrase": "^3.20.3",
     "ts-morph": "^13.0.2",
     "typescript": "^4.5.2",
