--- a/docs/package.json
+++ b/docs/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "docs:dev": "vitepress dev docs --host",
-    "docs:build": "vitepress build docs",
+    "docs:build": "node docsBuildInterceptor",
     "docs:serve": "vitepress serve docs"
   },
   "keywords": [],
