--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "normalize-wheel-es": "^1.1.1",
     "spark-md5": "^3.0.2",
     "vdirs": "^0.1.7",
+    "vuedraggable": "4.1.0",
     "vueuc": "^0.4.19",
     "wangeditor": "^4.7.12"
   },
