--- a/package.json
+++ b/package.json
@@ -56,9 +56,9 @@
     "lodash": "^4.17.21",
     "memoize-one": "^6.0.0",
     "normalize-wheel-es": "^1.1.1",
+    "sortablejs": "^1.14.0",
     "spark-md5": "^3.0.2",
     "vdirs": "^0.1.7",
-    "vuedraggable": "4.1.0",
     "vueuc": "^0.4.19",
     "wangeditor": "^4.7.12"
   },
