--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "async-validator": "^4.0.7",
     "dayjs": "^1.10.7",
     "lodash": "^4.17.21",
+    "lunar-calendar-panel": "^0.0.5",
     "memoize-one": "^6.0.0",
     "normalize-wheel-es": "^1.1.1",
     "sortablejs": "^1.14.0",
