--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "docs"
   ],
   "peerDependencies": {
-    "vue": "^3.2.0"
+    "vue": "^3.2.0",
+    "vue-router": "4.0.12"
   },
   "dependencies": {
     "@css-render/vue3-ssr": "^0.15.6",
@@ -60,6 +61,7 @@
     "sortablejs": "^1.14.0",
     "spark-md5": "^3.0.2",
     "vdirs": "^0.1.7",
+    "vue-router": "^4.0.0",
     "vueuc": "^0.4.19",
     "wangeditor": "^4.7.12"
   },
@@ -92,7 +94,6 @@
     "unplugin-vue-components": "^0.17.11",
     "vue": "^3.2.23",
     "vue-jest": "5.0.0-alpha.10",
-    "vue-router": "4.0.12",
     "vue-tsc": "0.29.6"
   }
 }
