--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/lodash": "^4.14.178",
     "@types/spark-md5": "^3.0.2",
     "@vicons/antd": "^0.11.0",
+    "@vicons/material": "^0.12.0",
     "@vueuse/core": "^7.1.2",
     "@wisdom-plus/components": "workspace:*",
     "@wisdom-plus/directives": "workspace:*",
