--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "vue-router": "4.0.12"
   },
   "dependencies": {
+    "@amap/amap-jsapi-loader": "^1.0.1",
     "@css-render/vue3-ssr": "^0.15.6",
     "@element-plus/icons": "^0.0.11",
     "@popperjs/core": "^2.10.2",
