--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "clean:lib": "rimraf dist",
     "tsc": "tsc --noEmit",
     "docs:dev": "pnpm run -C docs docs:dev",
-    "docs:build": "pnpm run -C docs docs:build"
+    "docs:build": "pnpm run -C docs docs:build",
+    "test": "vitest -w"
   },
   "repository": {
     "type": "git",
@@ -45,6 +46,8 @@
     "@types/spark-md5": "^3.0.2",
     "@vicons/antd": "^0.11.0",
     "@vicons/material": "^0.12.0",
+    "@vitejs/plugin-vue": "^2.2.4",
+    "@vue/test-utils": "^2.0.0-rc.17",
     "@vueuse/core": "^7.1.2",
     "@wisdom-plus/components": "workspace:*",
     "@wisdom-plus/directives": "workspace:*",
@@ -63,6 +66,7 @@
     "sortablejs": "^1.14.0",
     "spark-md5": "^3.0.2",
     "vdirs": "^0.1.7",
+    "vite": "2.8.6",
     "vue-router": "^4.0.0",
     "vueuc": "^0.4.19",
     "wangeditor": "^4.7.12"
@@ -75,13 +79,14 @@
     "@rollup/plugin-node-resolve": "^13.0.6",
     "@rollup/plugin-replace": "^3.0.0",
     "@types/sass": "^1.43.1",
-    "@vitejs/plugin-vue-jsx": "^1.3.1",
+    "@vitejs/plugin-vue-jsx": "^1.3.8",
     "chalk": "4.1.2",
     "components-helper": "^1.0.4",
     "esbuild": "^0.14.0",
     "fast-glob": "3.2.7",
     "gulp": "^4.0.2",
     "gulp-typescript": "^6.0.0-alpha.1",
+    "jsdom": "^19.0.0",
     "rimraf": "^3.0.2",
     "rollup": "^2.60.1",
     "rollup-plugin-css-only": "^3.1.0",
@@ -94,6 +99,7 @@
     "ts-morph": "^13.0.2",
     "typescript": "^4.5.2",
     "unplugin-vue-components": "^0.17.11",
+    "vitest": "^0.7.12",
     "vue": "^3.2.23",
     "vue-jest": "5.0.0-alpha.10",
     "vue-tsc": "0.29.6"
