--- a/play/package.json
+++ b/play/package.json
@@ -10,8 +10,8 @@
     "@element-plus/icons": "^0.0.11"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "1.10.0",
-    "vite": "2.6.14",
+    "@vitejs/plugin-vue": "^2.2.4",
+    "vite": "2.8.6",
     "vite-plugin-inspect": "0.3.11"
   }
 }
